k8s/staging/06-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nest-backend
  namespace: nest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nest-backend
  template:
    metadata:
      labels:
        app: nest-backend
    spec:
      containers:
      - name: backend
        image: nest-backend:k8s
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8000
        command: ["/home/owasp/init-backend.sh", "/home/owasp/entrypoint.sh"]
---
apiVersion: v1
kind: Service
metadata:
  name: nest-backend
  namespace: nest
spec:
  selector:
    app: nest-backend
  ports:
  - port: 8000
    targetPort: 8000
    nodePort: 30008  # Will be mapped to 8000
  type: NodePort  # Changed from ClusterIP
